<resources>
    <string name="app_name">SocialGaming2022</string>
    <string name="deleteButton">Delete Account</string>
    <string name="backButton">Back</string>
    <string name="display_name">"Display name: %1$s"</string>
    <string name="nickname">Nickname: %1$s</string>
    <string name="games_played">Games played: %1$d</string>
    <string name="games_won">Games won: %1$d</string>
    <string name="dark_theme">Dark theme </string>
    <string name="welcome">Welcome %1$s</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>Italian</item>
    </string-array>
</resources>