<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.WelcomeActivity">

    <Button
        android:id="@+id/profileButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/orange"
        android:text="@string/profile"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/friendsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/friends"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/textColor"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/map"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:backgroundTint="#101010"
        android:text="@string/settings"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:backgroundTint="#2196F3"
        android:text="@string/logout"
        android:textColor="@color/white" />
</RelativeLayout>