<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/profile"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:text="@string/display_name"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nickname"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/gamesPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:text="@string/games_played"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/gamesWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:text="@string/games_won"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#CF0000"
        android:text="@string/deleteButton"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/backToWelcomeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/black"
        android:text="@string/backButton" />

</RelativeLayout>