<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/settings"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkThemeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/dark_theme"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/currencyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="50dp"
        android:text="@string/currency"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <Button
        android:id="@+id/backToWelcomeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/black"
        android:text="@string/backButton" />

</RelativeLayout>